# course03_project

./: README.md  pyproject.toml
src/: main.py  operation.py
tests/: operations_error.json  operations_errors_2.json  test_main.py  test_operation.py
